fix to the options [not showing the number]

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,5 @@ html {
 }
 
 #phonetic_option:hover {
-  background-color: #111111;
+  background-color: #202020;
 }
